# hello-python

./: Dockerfile  README.md  hello.py  pipeline.yaml  pyproject.toml
.tekton/: hello-python-pull-request.yaml  hello-python-push.yaml
